# CAR-RENTAL-OOP

./: README.md  decorators.py  pyproject.toml  requirements.txt
app/: main.py
app/core/: database.py
app/models/: vehicle.py
app/routers/: vehicle_web.py
app/templates/: base.html  index.html  login.html  register.html  search_results.html
app/utils/: flash.py
