[project]
name = "car-rental-oop"
version = "0.1.0"
description = "ระบบเช่ารถออนไลน์ Final Project OOP"
authors = [
    { name = "", email = "your.email@example.com" }
    { name = "ชื่อของคุณ", email = "your.email@example.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "pydantic"
]